añadi flex wrap para que las peliculas en mobile se vean correctamente

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,7 @@ h2 {
     display: flex;
     gap: 1.5rem;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 footer {
